--- a/ABOUT.html
+++ b/ABOUT.html
@@ -10,7 +10,7 @@
 <p>LUBEGA SHABIBU</p>
 </header> 
 <nav> 
-<a href="Home.html">HOME</a> 
+<a href="index.html">HOME</a> 
 <a href="Shop.html">SHOP</a>
 <a href="About.html">ABOUT</a>
 <a href="Contact.html">CONTACT</a> 
@@ -25,3 +25,4 @@
 </footer> 
 </body> 
 </html> 
+
