--- a/CONTACT.html
+++ b/CONTACT.html
@@ -11,7 +11,7 @@
 <p>LUBEGA SHABIBU</p> 
 </header> 
 <nav> 
-<a href="Home.html">HOME</a> 
+<a href="index.html">HOME</a> 
 <a href="Shop.html">SHOP</a> 
 <a href="About.html">ABOUT</a>
 <a href="Contact">CONTACT</a> 
@@ -28,3 +28,4 @@
 </footer> 
 </body> 
 </html> 
+
