--- a/SHOP.html
+++ b/SHOP.html
@@ -10,7 +10,7 @@
 <p>LUBEGA SHABIBU</p>
 </header> 
 <nav> 
-<a href="Home.html">HOME</a>
+<a href="index.html">HOME</a>
 <a href="Shop.html">SHOP</a>
 <a href="About.html">ABOUT</a> 
 <a href="Contact.html">CONTACT</a> 
@@ -72,4 +72,5 @@
 </footer> 
 </body> 
 </html> 
+
 
