--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>LUBEGA SHABIBU</p>
 </header> 
 <nav>
-<a href="Home.html">HOME</a>
+<a href="index.html">HOME</a>
 <a href="Shop.html">SHOP</a> 
 <a href="About.html">ABOUT</a> 
 <a href="Contact.html">CONTACT</a> 
@@ -26,3 +26,4 @@
 </footer> 
 </body> 
 </html> 
+
