--- a/SHOP.html
+++ b/SHOP.html
@@ -11,7 +11,7 @@
 </header> 
 <nav> 
 <a href="index.html">HOME</a>
-<a href="index.html">SHOP</a>
+<a href="Shop.html">SHOP</a>
 <a href="About.html">ABOUT</a> 
 <a href="Contact.html">CONTACT</a> 
 </nav>
@@ -72,6 +72,7 @@
 </footer> 
 </body> 
 </html> 
+
 
 
 
