--- a/ABOUT.html
+++ b/ABOUT.html
@@ -11,9 +11,9 @@
 </header> 
 <nav> 
 <a href="index.html">HOME</a> 
-<a href="Shop.html">SHOP</a>
-<a href="About.html">ABOUT</a>
-<a href="Contact.html">CONTACT</a> 
+<a href="SHOP.html">SHOP</a>
+<a href="ABOUT.html">ABOUT</a>
+<a href="CONTACT.html">CONTACT</a> 
 </nav> 
 <div class="container"> 
 <h2 class="space">Who We Are?</h2> 
@@ -25,4 +25,5 @@
 </footer> 
 </body> 
 </html> 
+
 
