--- a/CONTACT.html
+++ b/CONTACT.html
@@ -12,9 +12,9 @@
 </header> 
 <nav> 
 <a href="index.html">HOME</a> 
-<a href="Shop.html">SHOP</a> 
-<a href="About.html">ABOUT</a>
-<a href="Contact">CONTACT</a> 
+<a href="SHOP.html">SHOP</a> 
+<a href="ABOUT.html">ABOUT</a>
+<a href="CONTACT">CONTACT</a> 
 </nav> 
 
 <div class="container"> 
@@ -28,4 +28,5 @@
 </footer> 
 </body> 
 </html> 
+
 
