--- a/SHOP.html
+++ b/SHOP.html
@@ -11,9 +11,9 @@
 </header> 
 <nav> 
 <a href="index.html">HOME</a>
-<a href="Shop.html">SHOP</a>
-<a href="About.html">ABOUT</a> 
-<a href="Contact.html">CONTACT</a> 
+<a href="SHOP.html">SHOP</a>
+<a href="ABOUT.html">ABOUT</a> 
+<a href="CONTACT.html">CONTACT</a> 
 </nav>
 <div class="container product-grid"> 
 <div class="product"> 
@@ -72,6 +72,7 @@
 </footer> 
 </body> 
 </html> 
+
 
 
 
