--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </header> 
 <nav>
 <a href="index.html">HOME</a>
-<a href="Shop.html">SHOP</a> 
-<a href="About.html">ABOUT</a> 
-<a href="Contact.html">CONTACT</a> 
+<a href="SHOP.html">SHOP</a> 
+<a href="ABOUT.html">ABOUT</a> 
+<a href="CONTACT.html">CONTACT</a> 
 </nav> 
 <div class="container"> <br/> <br/> <br/> <br/>
 <center><b><div class="hero"; style="font-family:Georgia, 'Times New Roman', Times, serif; font-size:80pt;">SAVAGE SHOES</div></b>
@@ -26,4 +26,5 @@
 </footer> 
 </body> 
 </html> 
+
 
